--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2005-12-02 17:43+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -153,6 +153,9 @@ msgstr "No s'ha pogut tancar la biblioteca de suport."
 #, fuzzy
 msgid "Could not configure supporting library."
 msgstr "No s'ha pogut tancar la biblioteca de suport."
+
+msgid "Encoding error."
+msgstr ""
 
 msgid "GStreamer encountered a general resource error."
 msgstr "GStreamer ha trobat un error general de recursos."
@@ -752,6 +755,20 @@ msgstr ""
 msgid "Model of the device used to create this media"
 msgstr "versió del codificador utilitzat per a codificar aquest flux"
 
+#, fuzzy
+msgid "application name"
+msgstr "ubicació"
+
+#, fuzzy
+msgid "Application used to create the media"
+msgstr "versió del codificador utilitzat per a codificar aquest flux"
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr ""
 
@@ -892,16 +909,16 @@ msgstr "El fitxer «%s» és un sòcol."
 msgid "Failed after iterations as requested."
 msgstr "Ha fallat després de les iteracions com s'ha demanat."
 
-#, fuzzy
-msgid "Error while writing to download file."
-msgstr "S'ha produït un error en escriure al fitxer «%s»."
-
 msgid "No Temp directory specified."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "no s'ha pogut obtenir informació sobre «%s»."
+
+#, fuzzy
+msgid "Error while writing to download file."
+msgstr "S'ha produït un error en escriure al fitxer «%s»."
 
 msgid "caps"
 msgstr "capacitats"
