--- a/po/cs.po
+++ b/po/cs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2008-10-12 12:12+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
@@ -151,6 +151,9 @@ msgstr "Nemohu zavřít podpůrou knihovnu."
 
 msgid "Could not configure supporting library."
 msgstr "Nemohu nastavit podpůrou knihovnu."
+
+msgid "Encoding error."
+msgstr ""
 
 msgid "GStreamer encountered a general resource error."
 msgstr "V GStreameru došlo k obecné chybě zdrojů."
@@ -751,6 +754,20 @@ msgstr ""
 msgid "Model of the device used to create this media"
 msgstr "verze kodéru používaného pro kódování tohoto proudu"
 
+#, fuzzy
+msgid "application name"
+msgstr "název místa"
+
+#, fuzzy
+msgid "Application used to create the media"
+msgstr "verze kodéru používaného pro kódování tohoto proudu"
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr ""
 
@@ -891,16 +908,16 @@ msgstr "Soubor \"%s\" je socket."
 msgid "Failed after iterations as requested."
 msgstr "Selhání po iteracích podle požadavku."
 
-#, fuzzy
-msgid "Error while writing to download file."
-msgstr "Chyba při zápisu do souboru \"%s\"."
-
 msgid "No Temp directory specified."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "Nemohu získat informace o \"%s\"."
+
+#, fuzzy
+msgid "Error while writing to download file."
+msgstr "Chyba při zápisu do souboru \"%s\"."
 
 msgid "caps"
 msgstr "schopnosti"
