--- a/po/da.po
+++ b/po/da.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.12\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2007-03-28 00:09+0200\n"
 "Last-Translator: Mogens Jaeger <mogens@jaeger.tf>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -150,6 +150,9 @@ msgstr "Kunne ikke lukke hjælpebiblioteket."
 
 msgid "Could not configure supporting library."
 msgstr "Kunne ikke konfigurere hjælpebiblioteket."
+
+msgid "Encoding error."
+msgstr ""
 
 msgid "GStreamer encountered a general resource error."
 msgstr "GStreamer opdagede en generel ressourcefejl."
@@ -746,6 +749,20 @@ msgstr ""
 msgid "Model of the device used to create this media"
 msgstr "koderversion brugt til indkodning af denne mediestrøm"
 
+#, fuzzy
+msgid "application name"
+msgstr "sted"
+
+#, fuzzy
+msgid "Application used to create the media"
+msgstr "koderversion brugt til indkodning af denne mediestrøm"
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr ""
 
@@ -886,16 +903,16 @@ msgstr "Filen \"%s\" er en sokkel."
 msgid "Failed after iterations as requested."
 msgstr "Fejlede efter iterationer som forespurgt."
 
-#, fuzzy
-msgid "Error while writing to download file."
-msgstr "Fejl under skrivning til filen \"%s\"."
-
 msgid "No Temp directory specified."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "Kunne ikke hente info til \"%s\"."
+
+#, fuzzy
+msgid "Error while writing to download file."
+msgstr "Fejl under skrivning til filen \"%s\"."
 
 msgid "caps"
 msgstr "kapabilitet"
