--- a/po/hu.po
+++ b/po/hu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.25.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2010-02-01 15:04+0100\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
@@ -150,6 +150,9 @@ msgstr "Nem zárható be a támogató programkönyvtár."
 
 msgid "Could not configure supporting library."
 msgstr "Nem állítható be a támogató programkönyvtár."
+
+msgid "Encoding error."
+msgstr ""
 
 msgid "GStreamer encountered a general resource error."
 msgstr "A GStreamer általános erőforráshibát észlelt."
@@ -750,6 +753,20 @@ msgstr ""
 msgid "Model of the device used to create this media"
 msgstr "az adatfolyam kódolására használt kódoló verziószáma"
 
+#, fuzzy
+msgid "application name"
+msgstr "földrajzi hely neve"
+
+#, fuzzy
+msgid "Application used to create the media"
+msgstr "az adatfolyam kódolására használt kódoló verziószáma"
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr ""
 
@@ -890,16 +907,16 @@ msgstr "A(z) „%s” fájl egy foglalat."
 msgid "Failed after iterations as requested."
 msgstr "Ismétlések után kérésére meghiúsult."
 
-#, fuzzy
-msgid "Error while writing to download file."
-msgstr "Hiba a(z) „%s” fájl írása közben."
-
 msgid "No Temp directory specified."
 msgstr "Nincs megadva ideiglenes könyvtár."
 
 #, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "Nem hozható létre a következő ideiglenes fájl: „%s”."
+
+#, fuzzy
+msgid "Error while writing to download file."
+msgstr "Hiba a(z) „%s” fájl írása közben."
 
 msgid "caps"
 msgstr "képességek"
