--- a/po/tr.po
+++ b/po/tr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2004-04-03 03:14+0300\n"
 "Last-Translator: Baris Cicek <baris@teamforce.name.tr>\n"
 "Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
@@ -161,6 +161,9 @@ msgstr "Destekleyici kütüphane kapatılamadı."
 #, fuzzy
 msgid "Could not configure supporting library."
 msgstr "Destekleyici kütüphane kapatılamadı."
+
+msgid "Encoding error."
+msgstr ""
 
 #, fuzzy
 msgid "GStreamer encountered a general resource error."
@@ -762,6 +765,20 @@ msgstr ""
 msgid "Model of the device used to create this media"
 msgstr "bu akımı kodlarken kullanılan kodlayıcının sürümü"
 
+#, fuzzy
+msgid "application name"
+msgstr "konum"
+
+#, fuzzy
+msgid "Application used to create the media"
+msgstr "bu akımı kodlarken kullanılan kodlayıcının sürümü"
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr ""
 
@@ -900,16 +917,16 @@ msgstr "\"%s\" dosyası düzenli bir dosya değil."
 msgid "Failed after iterations as requested."
 msgstr "İstenildiği gibi tekrarlama başarısız oldu."
 
-#, fuzzy
-msgid "Error while writing to download file."
-msgstr "\"%s\" dosyası yazılırken hata."
-
 msgid "No Temp directory specified."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "Kaynağa değerler atanamadı ya da alınamadı."
+
+#, fuzzy
+msgid "Error while writing to download file."
+msgstr "\"%s\" dosyası yazılırken hata."
 
 msgid "caps"
 msgstr "kabiliyetler"
