--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.8\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2005-04-27 14:55+0800\n"
 "Last-Translator: Abel Cheung <abelcheung@gmail.com>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
@@ -159,6 +159,9 @@ msgstr "無法關閉輔助函式庫。"
 #, fuzzy
 msgid "Could not configure supporting library."
 msgstr "無法關閉輔助函式庫。"
+
+msgid "Encoding error."
+msgstr ""
 
 #, fuzzy
 msgid "GStreamer encountered a general resource error."
@@ -746,6 +749,19 @@ msgstr ""
 msgid "Model of the device used to create this media"
 msgstr ""
 
+#, fuzzy
+msgid "application name"
+msgstr "位置"
+
+msgid "Application used to create the media"
+msgstr ""
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr ""
 
@@ -884,16 +900,16 @@ msgstr "“%s” 是一個 socket。"
 msgid "Failed after iterations as requested."
 msgstr ""
 
-#, fuzzy
-msgid "Error while writing to download file."
-msgstr "當寫入內容至檔案 “%s” 時發生錯誤。"
-
 msgid "No Temp directory specified."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "無法連接 %s 和 %s"
+
+#, fuzzy
+msgid "Error while writing to download file."
+msgstr "當寫入內容至檔案 “%s” 時發生錯誤。"
 
 msgid "caps"
 msgstr ""
