--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.29.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2010-07-09 01:12+0200\n"
 "Last-Translator: Christian Kirbach <christian.kirbach@googlemail.com>\n"
 "Language-Team: German <translation-team-de@lists.sourceforge.net>\n"
@@ -160,6 +160,9 @@ msgstr "Die Unterstützungsbibliothek konnte nicht geschlossen werden."
 
 msgid "Could not configure supporting library."
 msgstr "Die Unterstützungsbibliothek konnte nicht konfiguriert werden."
+
+msgid "Encoding error."
+msgstr ""
 
 msgid "GStreamer encountered a general resource error."
 msgstr "GStreamer hat einen allgemeinen Ressourcenfehler festgestellt."
@@ -769,6 +772,20 @@ msgstr "Gerätemodell"
 msgid "Model of the device used to create this media"
 msgstr "Das Modell des Geräts zur Erstellung dieses Mediums"
 
+#, fuzzy
+msgid "application name"
+msgstr "geologischer Ort"
+
+#, fuzzy
+msgid "Application used to create the media"
+msgstr "Das Modell des Geräts zur Erstellung dieses Mediums"
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr "Bildorientierung"
 
@@ -910,15 +927,15 @@ msgstr "Die Datei »%s« ist ein Socket."
 msgid "Failed after iterations as requested."
 msgstr "Nach dem Durchlaufen fehlgeschlagen. Wie gewünscht."
 
-msgid "Error while writing to download file."
-msgstr "Fehler beim Schreiben in die Download-Datei."
-
 msgid "No Temp directory specified."
 msgstr "Kein temporärer Ordner angegeben."
 
 #, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "Die temporäre Datei »%s« konnte nicht angelegt werden."
+
+msgid "Error while writing to download file."
+msgstr "Fehler beim Schreiben in die Download-Datei."
 
 msgid "caps"
 msgstr "Fähigkeiten"
