--- a/po/ja.po
+++ b/po/ja.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2008-10-16 19:57+0900\n"
 "Last-Translator: Makoto Kato <makoto.kt@gmail.com>\n"
 "Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
@@ -143,6 +143,9 @@ msgstr "サポートライブラリをクローズできません"
 
 msgid "Could not configure supporting library."
 msgstr "サポートライブラリを構成できません"
+
+msgid "Encoding error."
+msgstr ""
 
 msgid "GStreamer encountered a general resource error."
 msgstr "GStreamer 上で一般的なリソースエラーが起きました"
@@ -725,6 +728,19 @@ msgstr ""
 msgid "Model of the device used to create this media"
 msgstr "このストリームをエンコードするのに使ったエンコーダーのバージョン"
 
+msgid "application name"
+msgstr ""
+
+#, fuzzy
+msgid "Application used to create the media"
+msgstr "このストリームをエンコードするのに使ったエンコーダーのバージョン"
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr ""
 
@@ -863,16 +879,16 @@ msgstr "ファイル \"%s\" はソケットです"
 msgid "Failed after iterations as requested."
 msgstr ""
 
-#, fuzzy
-msgid "Error while writing to download file."
-msgstr "ファイル \"%s\" の書き込み中にエラーが発生しました"
-
 msgid "No Temp directory specified."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "\"%s\" 上の情報を取得できません"
+
+#, fuzzy
+msgid "Error while writing to download file."
+msgstr "ファイル \"%s\" の書き込み中にエラーが発生しました"
 
 msgid "caps"
 msgstr ""
