--- a/po/vi.po
+++ b/po/vi.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.28.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-07-26 17:44+0200\n"
+"POT-Creation-Date: 2010-09-06 20:18+0100\n"
 "PO-Revision-Date: 2010-04-27 22:59+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
@@ -150,6 +150,9 @@ msgstr "Không thể đóng thư viện hỗ trợ."
 
 msgid "Could not configure supporting library."
 msgstr "Không thể cấu hình thư viện hỗ trợ."
+
+msgid "Encoding error."
+msgstr ""
 
 msgid "GStreamer encountered a general resource error."
 msgstr "Trình GStreamer mới gặp một lỗi tài nguyên chung."
@@ -743,6 +746,20 @@ msgstr ""
 msgid "Model of the device used to create this media"
 msgstr "phiên bản của bộ mã hóa được dùng để mã hóa luồng này"
 
+#, fuzzy
+msgid "application name"
+msgstr "tên định vị địa lý"
+
+#, fuzzy
+msgid "Application used to create the media"
+msgstr "phiên bản của bộ mã hóa được dùng để mã hóa luồng này"
+
+msgid "application data"
+msgstr ""
+
+msgid "Arbitrary application data to be serialized into the media"
+msgstr ""
+
 msgid "image orientation"
 msgstr ""
 
@@ -889,15 +906,15 @@ msgstr "Tập tin « %s » là ổ cắm."
 msgid "Failed after iterations as requested."
 msgstr "Lỗi sau số lần lặp lại được chọn."
 
-msgid "Error while writing to download file."
-msgstr "Gặp lỗi khi ghi vào tập tin tải về."
-
 msgid "No Temp directory specified."
 msgstr "Chưa xác định thư mục tạm thời."
 
 #, c-format
 msgid "Could not create temp file \"%s\"."
 msgstr "Không thể tạo tập tin tạm thời « %s »."
+
+msgid "Error while writing to download file."
+msgstr "Gặp lỗi khi ghi vào tập tin tải về."
 
 msgid "caps"
 msgstr "khả năng"
